@@ -32,7 +32,7 @@ vocabularies = {
             ('de', 'Deutsch', 'label_language_de'),
             ('it', 'Italiano', 'label_language_it'),
             ('nl', 'Nederlands', 'label_language_nl'),
-            ('pt_BR', 'Portugueses(Brasileiro)', 'label_language_pt_BR'),
+            ('pt_BR', 'Brasileiro', 'label_language_pt_BR'),
             ('mg', 'Malagasy', 'label_language_mg'),
             ('ro', 'Romana', 'label_language_ro'),
             ('eu', 'Euskara', 'label_language_eu'),
